chandeliers-lus/tests/warn/dead_code/unused-import.stderr
error: constant `X__lus_2_global` is never used
  --> tests/warn/dead_code/unused-import.rs:21:18
   |
21 |     extern const X : int;
   |                  ^
   |
note: the lint level is defined here
  --> tests/warn/dead_code/unused-import.rs:2:9
   |
2  | #![deny(dead_code)]
   |         ^^^^^^^^^

error: method `step` is never used
  --> tests/warn/dead_code/unused-import.rs:22:17
   |
22 |     extern node foo() returns ();
   |                 ^^^ method in this implementation
